force-app/main/default/objects/DRE__DREObjectSettings__c/DRE__DREObjectSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows activation/deactivation of DRE for objects</description>
    <label>DRE Object Settings</label>
</CustomObject>