force-app/main/default/objects/DRE__DREObjectSettings__c/fields/DRE__Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>DRE__Batch_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of records to be processed in each batch when DRE is running in Bulk Mode</description>
    <inlineHelpText>Number of records to be processed in each batch when DRE is running in Bulk Mode</inlineHelpText>
    <label>Bulk Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>