force-app/main/default/objects/DRE__DREObjectSettings__c/fields/DRE__Bulk_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DRE__Bulk_Threshold__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Maximum number of records DRE should process without kicking into Bulk Mode. Any more than this number will enable Bulk Mode (asynchronous processing). This setting is applied only if Auto-Bulk is enabled in DRE Settings</description>
    <inlineHelpText>Maximum number of records DRE should process without kicking into Bulk Mode. Any more than this number will enable Bulk Mode (asynchronous processing). This setting is applied only if Auto-Bulk is enabled in DRE Settings</inlineHelpText>
    <label>Bulk Threshold</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>