force-app/main/default/objects/DRE__DREObjectSettings__c/fields/DRE__Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DRE__Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected DRE will execute when changes are made to this object</description>
    <inlineHelpText>If selected DRE will execute when changes are made to this object</inlineHelpText>
    <label>Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>