force-app/main/default/objects/DRE__DREObjectSettings__c/fields/DRE__View_Enabled__c.field-meta.xml
<CustomField>
    <fullName>DRE__View_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If selected DRE will execute when this object is viewed (for View rules)</description>
    <inlineHelpText>If selected DRE will execute when this object is viewed (for View rules)</inlineHelpText>
    <label>View Enabled</label>
    <type>Checkbox</type>
</CustomField>